Fix widow’d LLC on mobile

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -103,6 +103,12 @@ body {
             }
             */
         }
+
+        .vc_column-inner {
+            @include breakpoint(small down){
+                padding: 0 1rem;
+            }
+        }
     }
 }
 
